--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+body {
+  
+  font-family: 'Roboto', sans-serif;
+  background: #191765;
+}
 .logo {
-  color: #fff;
-  font-size: 58px;
+  font-size: 18px;
   line-height: 20px;
+
 }
 
+.container-fluid {
+  padding: 0 13%;
+}
+
+.nav-item{
+  font-size: 15px;
+  line-height: 20px;
+  
+}
