--- a/style.css
+++ b/style.css
@@ -17,10 +17,24 @@ body {
   line-height: 20px;
 }
 
+.about_items {
+  margin: 20px 0;
+}
+
 .about_img{
-  width: 50px;
+  width: 55px;
+  margin: 80px 0;
 }
 
 .info_container {
   margin: 0 6px;
 }
+ .sup_about {
+   width: 60%;
+   font-size: 20px;
+ }
+
+ .sup_container {
+   align-items: center;
+   justify-content: center;
+ }
